--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,3 +118,29 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+/* Tags */
+
+.tag-size-1 {
+  font-size: 25px;
+  color: rgb(0, 139, 53);
+}
+
+.tag-size-2 {
+  font-size: 25px;
+  color: rgb(67, 80, 196);
+}
+
+.tag-size-3 {
+  font-size: 30px;
+  color: rgb(0, 139, 53);
+}
+
+.tag-size-5 {
+  font-size: 35px;
+  color: rgb(67, 80, 196);
+}
+
+.post-tags ul{
+  display: inline-block;
+}
