--- a/sass/style.scss
+++ b/sass/style.scss
@@ -144,3 +144,8 @@ body {
 .post-tags ul{
   display: inline-block;
 }
+
+.sidebar .list.tags li {
+  display: inline-block;
+  margin-left: 10px;
+}
